--- a/src/style.css
+++ b/src/style.css
@@ -1,30 +1,29 @@
-.flower-collection {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 1rem;
-  padding: 1rem;
+#title {
+  text-align: center;
+  font-size: 2.5rem;
+  margin: 1rem 0;
 }
 
-.individual-flower {
+.flower-collection {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 0.5rem;
+  width: -webkit-fill-available;
+  flex-direction: row;
+  justify-content: center;
+  padding: 1rem;
 }
 
 .flower-img-wrapper {
   position: relative;
   display: inline-block;
+  width: 20%;
+  margin: -1px;
 }
 
 .flower-img {
-  max-width: 50%;
-  height: 200px;
+  width: 100%;
+  height: 800px;
   object-fit: cover;
   border: 2px solid black;
-  border-radius: 8px;
 }
 
 .main {
