--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,7 @@
   width: -webkit-fill-available;
   height: -webkit-fill-available;
   justify-content: center;
-  padding: 0.5rem;
+  gap: 0.25rem;
 }
 
 .flower-img-wrapper {
@@ -18,14 +18,13 @@
   display: inline-block;
   width: 20%;
   height: 100%;
-  margin: -1px;
+  transition: all 0.5s ease-in-out;
 }
 
 .flower-img {
   width: 100%;
-  height: 800px;
+  height: 900px;
   object-fit: cover;
-  border: 2px solid black;
 }
 
 .main {
@@ -44,5 +43,6 @@
 
 .flower-img-wrapper:hover .flower-img.sub {
   opacity: 1;
+  transition: ease-in-out 0.5s;
 }
 
