--- a/src/style.css
+++ b/src/style.css
@@ -1,30 +1,24 @@
-#title {
-  text-align: center;
-  font-size: 2.5rem;
-  margin: 1rem 0;
-}
-
 .flower-collection {
+  position: relative;
   display: flex;
   flex-direction: row;
   width: -webkit-fill-available;
-  height: -webkit-fill-available;
-  justify-content: center;
-  gap: 0.25rem;
+  height: 90vh;
+  gap: 2px;
 }
 
 .flower-img-wrapper {
   position: relative;
   display: inline-block;
   width: 20%;
-  height: 100%;
   transition: all 0.5s ease-in-out;
 }
 
 .flower-img {
   width: 100%;
-  height: 900px;
+  height: 90vh;
   object-fit: cover;
+  /* border: 2px solid black; */
 }
 
 .main {
@@ -43,6 +37,24 @@
 
 .flower-img-wrapper:hover .flower-img.sub {
   opacity: 1;
-  transition: ease-in-out 0.5s;
 }
 
+#header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
+  text-align: center;
+  margin: 0;
+  z-index: 1;
+  height: 10vh;
+}
+
+#title {
+  font-size: 3vh;
+}
+
+#subtitle {
+  font-size: 2vh;
+}
