--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: row;
   width: -webkit-fill-available;
-  height: 90vh;
+  height: 100vh;
   gap: 2px;
 }
 
@@ -16,7 +16,7 @@
 
 .flower-img {
   width: 100%;
-  height: 90vh;
+  height: 100vh;
   object-fit: cover;
   /* border: 2px solid black; */
 }
@@ -41,20 +41,22 @@
 
 #header {
   display: flex;
+  position: absolute;
+  top: 2vh;
+  left: 2vh;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   background-color: transparent;
-  text-align: center;
+  text-align: left;
   margin: 0;
   z-index: 1;
-  height: 10vh;
+  font-family: 'Garamond', serif;
+  cursor: pointer;
 }
 
 #title {
-  font-size: 3vh;
+  font-size: 2rem;
 }
 
 #subtitle {
-  font-size: 2vh;
+  font-size: 0.9rem;
 }
