--- a/src/style.css
+++ b/src/style.css
@@ -36,8 +36,8 @@ body {
   top: 0;
   left: 0;
   opacity: 0;
-  transition: opacity 0.5s;
   pointer-events: none;
+  transition: opacity 0.5s;
 }
 
 .flower-img-wrapper:hover .flower-img.sub {
@@ -46,7 +46,7 @@ body {
 
 .flower-img-wrapper:hover .flower-label {
   opacity: 1;
-  transition: opacity 0.5s 1s;
+  transition: opacity 0.5s 0.5s;
 }
 
 #header {
@@ -73,8 +73,16 @@ body {
 
 .flower-label {
   position: absolute;
-  bottom: 5vh;
+  width: 100%;
+  text-align: center;
+  line-height: 5vh;
+  font-size: 1.5rem;
+  height: 5vh;
+  bottom: 0;
   left: 50%;
   transform: translateX(-50%);
   opacity: 0;
+  background-color: rgba(255, 255, 255, 0.4);
+  color: black;
+  margin-bottom: 1vh;
 }
