--- a/src/style.css
+++ b/src/style.css
@@ -16,7 +16,7 @@ body {
   display: inline-block;
   width: 20%;
   align-items: center;
-  transition: all 0.5s ease-in-out;
+  transition: width 0.5s ease-in-out;
 }
 
 .flower-img {
@@ -37,7 +37,7 @@ body {
   left: 0;
   opacity: 0;
   pointer-events: none;
-  transition: opacity 0.5s;
+  transition: opacity 0.5s linear;
 }
 
 .flower-img-wrapper:hover .flower-img.sub {
@@ -46,7 +46,7 @@ body {
 
 .flower-img-wrapper:hover .flower-label {
   opacity: 1;
-  transition: opacity 0.5s 0.5s;
+  transition: opacity 0.5s ease-in-out 0.5s;
 }
 
 #header {
@@ -59,7 +59,7 @@ body {
   font-family: inherit;
   text-align: left;
   margin: 0;
-  z-index: 1;
+  z-index: 1000;
   cursor: pointer;
 }
 
