--- a/src/style.css
+++ b/src/style.css
@@ -1,88 +1,98 @@
+@font-face {
+  font-family: "Rochester";
+  src: url("/font/Rochester/Rochester-Regular.ttf") format("truetype");
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Tenor Sans";
+  src: url("/font/Tenor_Sans/TenorSans-Regular.ttf") format("truetype");
+  font-display: swap;
+}
+
+.tenor-sans {
+  font: 20px "Tenor Sans";
+  letter-spacing: -5%;
+}
+
 body {
-  font-family: 'Garamond', serif;
-}
-
-.flower-collection {
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  width: -webkit-fill-available;
-  height: 100vh;
-  gap: 2px;
-}
-
-.flower-img-wrapper {
-  position: relative;
-  display: inline-block;
-  width: 20%;
-  align-items: center;
-  transition: width 0.5s ease-in-out;
-}
-
-.flower-img {
-  width: 100%;
-  height: 100vh;
-  object-fit: cover;
-  /* border: 2px solid black; */
-}
-
-.main {
-  display: block;
-  transition: opacity 0.5s;
-}
-
-.sub {
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 0.5s linear;
-}
-
-.flower-img-wrapper:hover .flower-img.sub {
-  opacity: 1;
-}
-
-.flower-img-wrapper:hover .flower-label {
-  opacity: 1;
-  transition: opacity 0.5s ease-in-out 0.5s;
-}
-
-#header {
-  display: flex;
-  position: absolute;
-  top: 2vh;
-  left: 2vh;
-  flex-direction: column;
-  background-color: transparent;
-  font-family: inherit;
-  text-align: left;
+  color: #6B705C;
   margin: 0;
-  z-index: 1000;
+}
+
+.button {
   cursor: pointer;
 }
 
-#title {
-  font-size: 2rem;
+.banner {
+  padding: 5vh 8rem;
+  display: flex;
+  flex-direction: column;
 }
 
-#subtitle {
-  font-size: 0.9rem;
-}
-
-.flower-label {
-  position: absolute;
-  width: 100%;
-  text-align: center;
-  line-height: 5vh;
-  font-size: 1.5rem;
+.page-header {
+  display: flex;
+  flex-direction: row;
   height: 5vh;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  opacity: 0;
-  background-color: rgba(255, 255, 255, 0.4);
-  color: black;
-  margin-bottom: 1vh;
+  gap: 4rem;
+  align-items: last baseline;
+  margin-bottom: 5vh;
 }
+
+#home-btn {
+  font: 40px "Rochester";
+}
+
+#top-banner {
+  height: 50vh;
+  background-color: #F0EFEB;
+}
+
+.banner-content {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: center;
+}
+
+.banner-btn {
+  background-color: #DBD0BD;
+  border: none;
+  box-shadow: 0 0 2px darkslategray;
+  color: inherit;
+  width: fit-content;
+  border-radius: 8px;
+  padding: 0.5em 1em;
+  margin-top: 5vh;
+}
+
+.banner-desc {
+  text-wrap: balance;
+  width: 40vw;
+}
+
+.banner-title {
+  font-size: 36px;
+}
+
+#bottom-banner {
+  height: 30vh;
+}
+
+#bottom-banner-content {
+  align-items: flex-end;
+  text-align: right;
+}
+
+/* #top-banner-flower-img {
+  position: absolute;
+  transform: rotate(-35deg);
+  width: 40vw;
+  top: -49px;
+  left: 720px;
+} 
+  
+#bottom-banner-img {
+
+} */
+
