--- a/src/style.css
+++ b/src/style.css
@@ -18,20 +18,26 @@
 body {
   color: #6B705C;
   margin: 0;
-  overflow-y: hidden;
 }
 
 .button {
   cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  height: 1.2em;
+  overflow-y: hidden;
 }
 
 .root {
   padding: 5vh 8rem;
+  height: 90vh;
+  overflow-y: hidden;
 }
 
 .banner {
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
 
 .page-header {
@@ -45,6 +51,10 @@ body {
 
 #home-btn {
   font: 40px "Rochester";
+}
+
+.btn-text {
+  transition: transform 0.25s ease-in-out;
 }
 
 #top-banner {
@@ -65,9 +75,11 @@ body {
   box-shadow: 0 0 2px darkslategray;
   color: inherit;
   width: fit-content;
+  height: fit-content;
   border-radius: 8px;
   padding: 0.5em 1em;
   margin-top: 5vh;
+  transition: all 0.25s ease-in-out;
 }
 
 .banner-desc {
@@ -95,12 +107,8 @@ body {
   bottom: 0;
 }
 
-#gallery-page {
-  height: 70vh;
-}
-
 #gallery-content {
-  height: 100%;
+  height: 70vh;
 }
 
 .flower-img {
@@ -128,12 +136,51 @@ body {
   gap: 2em;
 }
 
+#commission-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 4em;
+  height: 70vh;
+}
+
 #commission-text {
   display: flex;
   flex-direction: column;
   gap: 1em;
   width: 60vw;
   text-wrap: pretty;
+}
+
+#commission-form-container {
+  display: block;
+  gap: 2rem;
+  height: fit-content;
+
+  input {
+    height: 2rem;
+  }
+}
+
+.commission-form-section {
+  display: none;
+  transition: all 0.25s ease-in-out;
+}
+
+.commission-form-section.active {
+  display: block;
+}
+
+.commission-form-field {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5em;
+}
+
+#commission-form-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 /* #top-banner-flower-img {
