--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,10 @@
+:root {
+  --background-color: #f8f8f6;
+  --secondary-background-color: #f0efeb;
+  --primary-font-color: #6b705c;
+  --primary-accent-color: #dbd0bd;
+}
+
 @font-face {
   font-family: "Rochester";
   src: url("/font/Rochester/Rochester-Regular.ttf") format("truetype");
@@ -12,17 +19,18 @@
 
 .tenor-sans {
   font: 20px "Tenor Sans";
+  color: var(--primary-font-color);
   letter-spacing: -0.05em;
 }
 
 body {
-  color: #6b705c;
+  color: var(--primary-font-color);
   margin: 0;
   overflow-y: hidden;
+  background-color: var(--background-color);
 }
 
 .button {
-  cursor: pointer;
   display: flex;
   flex-direction: column;
   height: 1.2em;
@@ -43,8 +51,11 @@ body {
 
 .page-header {
   display: flex;
+  position: absolute;
   flex-direction: row;
   height: 5vh;
+  top: 3vh;
+  left: 8rem;
   gap: 4rem;
   align-items: last baseline;
   margin-bottom: 5vh;
@@ -55,12 +66,12 @@ body {
 }
 
 .btn-text {
-  transition: transform 0.25s ease-in-out;
+  transition: transform 0.2s ease;
 }
 
 #top-banner {
   height: 50vh;
-  background-color: #f0efeb;
+  background-color: var(--secondary-background-color);
 }
 
 .banner-content {
@@ -71,16 +82,20 @@ body {
 }
 
 .banner-btn {
-  background-color: #dbd0bd;
-  border: none;
-  box-shadow: 0 0 2px darkslategray;
-  color: inherit;
+  background-color: var(--primary-accent-color);
+  border: 1px solid transparent;
   width: fit-content;
   height: fit-content;
   border-radius: 8px;
   padding: 0.5em 1em;
   margin-top: 5vh;
-  transition: all 0.25s ease-in-out;
+  transition: all 0.2s ease;
+  cursor: pointer;
+}
+
+.banner-btn:hover {
+  border: 1px solid var(--primary-font-color);
+  box-shadow: 0 0 5px 1px var(--primary-accent-color);
 }
 
 .banner-desc {
@@ -113,12 +128,23 @@ body {
 }
 
 .flower-img {
-  max-width: 300px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 300px;
+  height: 450px;
+  object-fit: cover;
+  transition: all 0.3s ease-in-out;
+}
+
+.flower-main-img {
+  z-index: 2;
 }
 
 .flower-container {
-  display: flex;
-  flex-direction: row;
+  position: relative;
+  width: 100%;
+  height: 450px;
 }
 
 .flower-label {
@@ -126,6 +152,7 @@ body {
   transform: rotate(180deg);
   height: fit-content;
   align-self: flex-end;
+  font-size: 1em;
   width: 100%;
   padding: 0.5em 0.5em;
 }
@@ -134,7 +161,7 @@ body {
   display: flex;
   flex-direction: row;
   overflow-x: scroll;
-  gap: 2em;
+  gap: 350px;
 }
 
 #commission-container {
@@ -154,22 +181,31 @@ body {
   text-wrap: pretty;
 }
 
-#commission-form-container {
+#commission-form {
   display: block;
   gap: 2rem;
   height: fit-content;
+  background: var(--background-color);
+}
 
-  input {
-    height: 2rem;
-    padding: 0 0.7em;
-    font-size: 0.7em;
-    border: 2px solid black;
-    border-radius: 8px;
-  }
+.form-input {
+  height: 2rem;
+  padding: 0 0.7em;
+  font-size: 0.7em;
+  border: 2px solid var(--primary-font-color);
+  background-color: var(--primary-background-color);
+  color: var(--primary-font-color);
+  border-radius: 8px;
+}
 
-  input#additional-info-input {
-    height: 6rem;
-  }
+.form-input:focus {
+  box-shadow: 0 0 4px 2px var(--primary-accent-color);
+  outline: none;
+}
+
+.form-textarea {
+  padding: 0.5em 0.7em;
+  height: 6rem;
 }
 
 .commission-form-section {
@@ -199,6 +235,10 @@ body {
 
 .form-btn {
   margin: 0;
+}
+
+#submit-btn {
+  display: none;
 }
 
 .lucide-dot {
