--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 :root {
-  --background-color: #f8f8f6;
+  --background-color: #f6f6f4;
   --secondary-background-color: #f0efeb;
   --primary-font-color: #6b705c;
   --primary-accent-color: #dbd0bd;
@@ -26,8 +26,23 @@
 body {
   color: var(--primary-font-color);
   margin: 0;
-  overflow-y: hidden;
   background-color: var(--background-color);
+}
+
+#root {
+  position: relative;
+  margin: 0;
+  min-height: 100vh;
+  display: block;
+}
+
+section {
+  padding: 5vh 8em;
+  min-height: 75vh;
+}
+
+#home-page {
+  padding: 0 0;
 }
 
 .button {
@@ -35,30 +50,24 @@ body {
   flex-direction: column;
   height: 1.2em;
   overflow-y: hidden;
-}
-
-.root {
-  padding: 5vh 8rem;
-  height: 90vh;
-  overflow-y: hidden;
+  cursor: pointer;
 }
 
 .banner {
   display: flex;
   flex-direction: column;
   height: 100%;
+  padding-bottom: 10vh;
+  justify-content: center;
 }
 
 .page-header {
   display: flex;
-  position: absolute;
   flex-direction: row;
+  padding: 2.5vh 8em;
   height: 5vh;
-  top: 3vh;
-  left: 8rem;
   gap: 4rem;
   align-items: last baseline;
-  margin-bottom: 5vh;
 }
 
 #home-btn {
@@ -69,16 +78,37 @@ body {
   transition: transform 0.2s ease;
 }
 
-#top-banner {
-  height: 50vh;
-  background-color: var(--secondary-background-color);
+.home-background-container {
+  position: absolute;
 }
 
-.banner-content {
+.home-banner {
+  position: relative;
+  padding: 0 8em;
+  height: 45vh;
+}
+
+.home-banner-text {
   display: flex;
   flex-direction: column;
-  height: 100%;
   justify-content: center;
+  max-width: 40vw;
+}
+
+#top-banner-text {
+  grid-column: 1 / span 6;
+}
+
+#top-banner-img {
+  max-width: 30vw;
+  transform: rotate(-35deg) scale(1.2);
+  justify-self: last baseline;
+}
+
+#bottom-banner-text {
+  align-items: end;
+  align-self: end;
+  text-align: right;
 }
 
 .banner-btn {
@@ -90,7 +120,6 @@ body {
   padding: 0.5em 1em;
   margin-top: 5vh;
   transition: all 0.2s ease;
-  cursor: pointer;
 }
 
 .banner-btn:hover {
@@ -99,78 +128,87 @@ body {
 }
 
 .banner-desc {
+  max-width: 40vw;
   text-wrap: balance;
-  width: 40vw;
 }
 
 .banner-title {
   font-size: 36px;
 }
 
-#bottom-banner {
-  height: 30vh;
-}
-
-#bottom-banner-content {
-  align-items: flex-end;
-  text-align: right;
-}
-
 .page-title {
   font: 128px "Rochester";
   position: absolute;
+  pointer-events: none;
+  overflow: hidden;
   height: 1em;
   bottom: 0;
 }
 
-#gallery-content {
-  height: 70vh;
+.flower-img {
+  display: block;
+  width: 100%;
+  aspect-ratio: 2 / 3;
+  object-fit: cover;
+  transition: all 0.2s ease;
 }
 
-.flower-img {
+.flower-hover-img {
   position: absolute;
   top: 0;
   left: 0;
-  width: 300px;
-  height: 450px;
-  object-fit: cover;
-  transition: all 0.3s ease-in-out;
-}
-
-.flower-main-img {
-  z-index: 2;
+  z-index: -1;
 }
 
 .flower-container {
   position: relative;
   width: 100%;
-  height: 450px;
-}
-
-.flower-label {
-  writing-mode: vertical-lr;
-  transform: rotate(180deg);
-  height: fit-content;
-  align-self: flex-end;
-  font-size: 1em;
-  width: 100%;
-  padding: 0.5em 0.5em;
+  height: 100%;
+  overflow: hidden;
+  box-shadow: 0 0 5px 2px var(--primary-accent-color);
 }
 
 #gallery-photos {
-  display: flex;
-  flex-direction: row;
-  overflow-x: scroll;
-  gap: 350px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 5%;
+  align-items: center;
+}
+
+#flower-tooltip {
+  display: block;
+  position: fixed;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  width: 20vw;
+  padding: 1em 1.5em;
+  border-radius: 8px;
+  backdrop-filter: blur(4px);
+  background-color: rgba(248, 248, 246, 0.9);
+  border: 1px solid var(--primary-font-color);
+  box-shadow: 0 0 5px 2px var(--primary-accent-color);
+  z-index: 2;
+  pointer-events: none;
+  transition: opacity 0.2s ease;
+}
+
+#flower-name {
+  font: 3em "Rochester";
+  margin: 0 0 0.5em 0;
+}
+
+#flower-desc {
+  font-size: 1em;
+  text-wrap: pretty;
+  margin: 0.5em 0;
 }
 
 #commission-container {
-  display: flex;
-  flex-direction: column;
   gap: 4em;
-  height: 60vh;
-  margin-top: 10vh;
   justify-content: space-between;
+  padding-top: 5vh;
 }
 
 #commission-text {
@@ -185,7 +223,9 @@ body {
   display: block;
   gap: 2rem;
   height: fit-content;
+  border-radius: 8px;
   background: var(--background-color);
+  overflow-x: hidden;
 }
 
 .form-input {
@@ -208,14 +248,18 @@ body {
   height: 6rem;
 }
 
-.commission-form-section {
-  display: none;
-  transition: all 0.25s ease-in-out;
+#form-sections {
+  display: grid;
+  grid-template-columns: repeat(5, 100%);
+  column-gap: 2em;
+  align-items: last baseline;
+  transition: all 0.2s ease;
 }
 
-.commission-form-section.active {
+.commission-form-section {
   display: flex;
   flex-direction: column;
+  width: 100%;
   gap: 1em;
 }
 
@@ -235,16 +279,18 @@ body {
 
 .form-btn {
   margin: 0;
+  transition: all 0.2s ease;
 }
 
-#submit-btn {
-  display: none;
+#resubmit-btn:disabled {
+  filter: opacity(0.5);
+  pointer-events: none;
 }
 
 .lucide-dot {
   transform: scale(2);
   opacity: 0.4;
-  transition: all 0.25s ease-in-out;
+  transition: all 0.2s ease;
 }
 
 .lucide-dot.active {
