--- a/src/style.css
+++ b/src/style.css
@@ -80,11 +80,27 @@ section {
 
 .home-background-container {
   position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
+
+.home-background-image {
+  object-fit: cover;
+  object-position: center center;
+  display: block;
+  max-width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
 
 .home-banner {
   position: relative;
-  padding: 0 8em;
+  padding: 0;
   height: 45vh;
 }
 
@@ -96,19 +112,14 @@ section {
 }
 
 #top-banner-text {
-  grid-column: 1 / span 6;
-}
-
-#top-banner-img {
-  max-width: 30vw;
-  transform: rotate(-35deg) scale(1.2);
-  justify-self: last baseline;
+  padding: 0 8em;
 }
 
 #bottom-banner-text {
   align-items: end;
   align-self: end;
   text-align: right;
+  padding: 0 8em;
 }
 
 .banner-btn {
