--- a/src/style.css
+++ b/src/style.css
@@ -18,7 +18,7 @@
 }
 
 .tenor-sans {
-  font: 20px "Tenor Sans";
+  font: 1.25em "Tenor Sans";
   color: var(--primary-font-color);
   letter-spacing: -0.05em;
 }
@@ -37,7 +37,7 @@ body {
 }
 
 section {
-  padding: 5vh 8em;
+  padding: 2em 15vw;
   min-height: 75vh;
 }
 
@@ -57,21 +57,30 @@ section {
   display: flex;
   flex-direction: column;
   height: 100%;
-  padding-bottom: 10vh;
+  padding-bottom: 8em;
   justify-content: center;
+  padding-top: 5vh;
 }
 
 .page-header {
   display: flex;
   flex-direction: row;
-  padding: 2.5vh 8em;
-  height: 5vh;
-  gap: 4rem;
+  padding: 2.5vh 15vw;
+  min-height: 5vh;
+  gap: 10%;
   align-items: last baseline;
 }
 
+.mobile-page-header {
+  display: none;
+}
+
+.mobile-nav {
+  display: none;
+}
+
 #home-btn {
-  font: 40px "Rochester";
+  font: 2.5em "Rochester";
 }
 
 .btn-text {
@@ -88,20 +97,16 @@ section {
 .home-background-image {
   object-fit: cover;
   object-position: center center;
-  display: block;
-  max-width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
   width: 100%;
+  height: 100%;
 }
-
 
 .home-banner {
   position: relative;
+  display: flex;
+  flex-direction: column;
   padding: 0;
-  height: 45vh;
+  min-height: 45vh;
 }
 
 .home-banner-text {
@@ -109,17 +114,13 @@ section {
   flex-direction: column;
   justify-content: center;
   max-width: 40vw;
-}
-
-#top-banner-text {
-  padding: 0 8em;
+  padding: 2em 15vw;
 }
 
 #bottom-banner-text {
   align-items: end;
   align-self: end;
   text-align: right;
-  padding: 0 8em;
 }
 
 .banner-btn {
@@ -139,16 +140,16 @@ section {
 }
 
 .banner-desc {
-  max-width: 40vw;
+  max-width: 50vw;
   text-wrap: balance;
 }
 
 .banner-title {
-  font-size: 36px;
+  font-size: 2.5em;
 }
 
 .page-title {
-  font: 128px "Rochester";
+  font: 15vmin "Rochester";
   position: absolute;
   pointer-events: none;
   overflow: hidden;
@@ -159,8 +160,10 @@ section {
 .flower-img {
   display: block;
   width: 100%;
+  min-width: 10em;
   aspect-ratio: 2 / 3;
   object-fit: cover;
+  opacity: 1;
   transition: all 0.2s ease;
 }
 
@@ -179,12 +182,24 @@ section {
   box-shadow: 0 0 5px 2px var(--primary-accent-color);
 }
 
+.mobile-flower-container {
+  display: none;
+}
+
+#gallery-content {
+  justify-content: space-between;
+}
+
 #gallery-photos {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
   gap: 5%;
   align-items: center;
+}
+
+.scroll-space {
+  display: none;
 }
 
 #flower-tooltip {
@@ -244,7 +259,7 @@ section {
   padding: 0 0.7em;
   font-size: 0.7em;
   border: 2px solid var(--primary-font-color);
-  background-color: var(--primary-background-color);
+  background-color: var(--background-color);
   color: var(--primary-font-color);
   border-radius: 8px;
 }
@@ -306,4 +321,138 @@ section {
 
 .lucide-dot.active {
   opacity: 1;
+}
+
+@media screen and (max-width: 50em) {
+  .tenor-sans {
+    font-size: 4vmin;
+  }
+
+  .home-background-container {
+    position: static;
+    height: 15rem;
+  }
+
+  .home-banner {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .home-banner-text,
+  #bottom-banner-text {
+    max-width: 100%;
+    text-align: center;
+    align-items: center;
+  }
+
+  .page-header {
+    display: none;
+  }
+
+  .mobile-page-header {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    padding: 2.5vh;
+    align-items: last baseline;
+
+    .lucide {
+      position: relative;
+      cursor: pointer;
+      z-index: 998;
+    }
+
+    .lucide-x {
+      display: none;
+    }
+  }
+
+  #mobile-nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    background-color: var(--background-color);
+    box-shadow: 0 0 12rem gray;
+    flex-direction: column;
+    transition: opacity 0.5s ease;
+    opacity: 0;
+    padding: 10vh 2.5vh;
+    gap: 1em;
+    width: 50vw;
+    height: 100vh;
+    z-index: 997;
+  }
+
+  #home-btn {
+    grid-column: 3 / span 4;
+    justify-self: center;
+  }
+
+  #mobile-flower-tooltip,
+  #flower-tooltip {
+    display: none;
+  }
+
+  #gallery-photos {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    padding-right: 15vw;
+    scrollbar-width: none;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+    gap: 2em;
+    box-sizing: content-box;
+    -webkit-overflow-scrolling: touch; /* iOS smooth scrolling */
+    touch-action: pan-x;
+  }
+
+  .banner {
+    width: 100%;
+    margin: auto;
+    padding: 5vh 0;
+  }
+
+  .home-banner {
+    padding-bottom: 0;
+  }
+
+  #gallery-content {
+    padding-bottom: 30vw;
+  }
+
+  .banner-title {
+    font-size: 2.5em;
+  }
+
+  .flower-container {
+    display: none;
+  }
+
+  .mobile-flower-container {
+    display: block;
+    scroll-snap-align: center;
+    min-width: 80%;
+  }
+
+  #flower-tooltip {
+    display: none;
+  }
+
+  #mobile-flower-tooltip {
+    display: block;
+    position: fixed;
+    left: 0;
+    top: auto;
+    padding: 2em;
+    bottom: 0;
+    opacity: 0;
+    height: fit-content;
+    backdrop-filter: blur(4px);
+    background-color: rgba(228, 228, 226, 0.6);
+    /* box-shadow: 0 0 12rem gray; */
+    z-index: 2;
+    pointer-events: none;
+    transition: opacity 0.2s ease;
+  }
 }
