--- a/src/style.css
+++ b/src/style.css
@@ -37,7 +37,7 @@ body {
 }
 
 section {
-  padding: 2em 15vw;
+  padding: 5vh 15vw 15vh 15vw;
   min-height: 75vh;
 }
 
@@ -57,7 +57,6 @@ section {
   display: flex;
   flex-direction: column;
   height: 100%;
-  padding-bottom: 8em;
   justify-content: center;
   padding-top: 5vh;
 }
@@ -66,17 +65,9 @@ section {
   display: flex;
   flex-direction: row;
   padding: 2.5vh 15vw;
-  min-height: 5vh;
+  height: 5vh;
   gap: 10%;
   align-items: last baseline;
-}
-
-.mobile-page-header {
-  display: none;
-}
-
-.mobile-nav {
-  display: none;
 }
 
 #home-btn {
@@ -106,14 +97,14 @@ section {
   display: flex;
   flex-direction: column;
   padding: 0;
-  min-height: 45vh;
+  min-height: 70vh;
 }
 
 .home-banner-text {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  max-width: 40vw;
+  max-width: 30vw;
   padding: 2em 15vw;
 }
 
@@ -182,10 +173,6 @@ section {
   box-shadow: 0 0 5px 2px var(--primary-accent-color);
 }
 
-.mobile-flower-container {
-  display: none;
-}
-
 #gallery-content {
   justify-content: space-between;
 }
@@ -196,10 +183,6 @@ section {
   grid-template-rows: repeat(2, 1fr);
   gap: 5%;
   align-items: center;
-}
-
-.scroll-space {
-  display: none;
 }
 
 #flower-tooltip {
@@ -234,7 +217,6 @@ section {
 #commission-container {
   gap: 4em;
   justify-content: space-between;
-  padding-top: 5vh;
 }
 
 #commission-text {
@@ -324,6 +306,10 @@ section {
   opacity: 1;
 }
 
+.mobile-page-header, .mobile-nav, .mobile-flower-container {
+  display: none;
+}
+
 @media screen and (max-width: 50em) {
   .tenor-sans {
     font-size: 4vmin;
@@ -344,6 +330,7 @@ section {
     max-width: 100%;
     text-align: center;
     align-items: center;
+    align-self: center;
   }
 
   .page-header {
@@ -377,7 +364,7 @@ section {
     flex-direction: column;
     transition: opacity 0.5s ease;
     opacity: 0;
-    padding: 10vh 2.5vh;
+    padding: 15vh 2.5vh;
     gap: 1em;
     width: 50vw;
     height: 100vh;
@@ -390,7 +377,7 @@ section {
   }
 
   #mobile-flower-tooltip,
-  #flower-tooltip {
+  #flower-tooltip, .flower-container {
     display: none;
   }
 
@@ -426,20 +413,11 @@ section {
     font-size: 2.5em;
   }
 
-  .flower-container {
-    display: none;
-  }
-
   .mobile-flower-container {
     display: block;
     scroll-snap-align: center;
     min-width: 80%;
   }
-
-  #flower-tooltip {
-    display: none;
-  }
-
   #mobile-flower-tooltip {
     display: block;
     position: fixed;
